--- a/Zsh.mw
+++ b/Zsh.mw
@@ -1,104 +1,31 @@
-{{Lowercase title}}
-{{InfoBox stack
-|{{InfoBox homepage|https://www.zsh.org/|header=true}}
-|{{InfoBox package|app-shells/zsh}}
-|{{InfoBox wikipedia}}
-|{{InfoBox ohloh}}
-|{{InfoBox gitweb|http://sourceforge.net/p/zsh/code/ci/master/tree/|raw=true}}
-|{{InfoBox guide|zsh}}
-}}
+Zsh (the Z shell) is an interactive login shell that can also be used as a powerful scripting language interpreter. It is similar to the Bourne shell and the Korn shell, but offers extensive configurability, powerful commandline completion, file globbing, and spelling correction.
 
-{{c|zsh}} ('''Z sh'''ell) is [[Article description::an interactive login shell that can also be used as a powerful scripting language interpreter.]] It is similar to [[bash]] and the Korn shell, but offers extensive configurability, powerful command-line completion, file globbing, and spelling correction.
+== Installing zsh ==
+{{emerge|app-shells/zsh|app-shells/zsh-completion}}
 
-== Installation ==
+== Configuring zsh ==
+Upon running zsh for the first time as a new user, you will be greeted by a basic configuration dialog. You can skip this by pressing "q" to configure zsh manually.
 
-=== USE flags ===
-
-{{USEflag|package=app-shells/zsh}}
-
-=== Emerge ===
-
-Install {{Package|app-shells/zsh}}:
-
-{{Emerge|app-shells/zsh}}
-
-=== Add-ons ===
-
-==== app-shells/zsh-completions ====
-
-Emerging {{Package|app-shells/zsh-completions}} enables auto-completion for arguments of commands, which is one of the advantages {{c|zsh}} has over other shells:
-
-{{Emerge|app-shells/zsh-completions}}
-
-{{Note|To enable auto-completion globally (for most programs), add 'zsh-completion' to the <code>USE</code> variable in {{Path|/etc/portage/make.conf}}}}
-
-==== app-shells/gentoo-zsh-completions ====
-
-Emerging {{Package|app-shells/gentoo-zsh-completions}} enables Gentoo specific auto-completion for arguments of Portage and other Gentoo commands:
-
-{{Emerge|app-shells/gentoo-zsh-completions}}
-
-When installing this package be sure to add the following to the respective {{Path|~/.zshrc}} files:
-
-{{FileBox|filename=~/.zshrc|title=Enabling Portage completions and Gentoo prompt for {{c|zsh}}|1=
-autoload -U compinit promptinit
-compinit
-promptinit; prompt gentoo
-}}
-
-To enable a cache for the completions add:
-
-{{FileBox|filename=~/.zshrc|title=Enabling cache for the completions for {{c|zsh}}|1=
-zstyle ':completion::complete:*' use-cache 1
-}}
-
-== Configuration ==
-
-=== Invocation ===
-
-{{Cmd|zsh}}
-
-Upon running {{c|zsh}} for the first time as a new user, you will be greeted by a basic configuration dialog. The setup process can be skipped by pressing {{Key|q}}. If the setup process is skipped {{c|zsh}} can be setup manually.
-
-=== Setting {{c|zsh}} as the default shell ===
-
-To make {{c|zsh}} the default shell for a user, run:
-
+To make zsh your default shell, you can run:
 {{Cmd|chsh -s /bin/zsh}}
 
-=== File ===
-
-{{c|zsh}}'s main configuration file is located in each user's home directory at {{Path|~/.zshrc}}. Reload this file in running shells for the changes to take effect:
-
+Zsh's main configuration file is <tt>~/.zshrc</tt> and you can reload this configuration in a running shell with:
 {{Cmd|source ~/.zshrc}}
 
-{{Note|Reloading via the {{c|source}} command is only necessary when instances of {{c|zsh}} are already in memory ''after'' changes are made to the shell's configuration file.}}
-
-=== oh-my-zsh ===
-
-The zsh community created numerous tweaks, the easiest way to acquire them is to install [https://github.com/robbyrussell/oh-my-zsh oh-my-zsh] framework. It contains handy plugins and eye [https://github.com/robbyrussell/oh-my-zsh/wiki/themes candy themes], and makes their configuration very easy. However you should always consider the security risk involving running code outside of Gentoo developers jurisdiction.
-
-== Removal ==
-
-=== Unmerge ===
-
-{{Unmerge|app-shells/zsh}}
-
-== See also ==
-
-* {{See also|Zsh/Guide|ZSH guide}}
+See also the [http://www.gentoo.org/doc/en/zsh.xml Gentoo Zsh Configuration and Installation Guide].
 
 == External resources ==
-
-* [http://zsh.sourceforge.net/Intro/intro_toc.html Official {{c|zsh}} introduction]
+* [http://www.zsh.org/ Zsh homepage]
+* [http://zsh.sourceforge.net/Intro/intro_toc.html Official Zsh introduction]
 * [http://zsh.sourceforge.net/Guide/zshguide.html Official User's Guide]
-* [http://zsh.sourceforge.net/Doc/ {{c|zsh}} Documentation in various formats]
-* [http://zsh.sourceforge.net/FAQ/zshfaq.html {{c|zsh}} FAQ]
-* [http://zshwiki.org/home/start {{c|zsh}} Wiki]
-* [http://grml.org/zsh/zsh-lovers.html {{c|zsh}} Lovers]
-* [http://grml.org/zsh/ GRML {{c|zsh}} Configuration]
+* [http://zsh.sourceforge.net/Doc/ Zsh Documentation in various formats]
+* [http://zsh.sourceforge.net/FAQ/zshfaq.html Zsh FAQ]
+* [http://zshwiki.org/home/start Zsh Wiki]
+* [http://www.gentoo.org/doc/en/zsh.xml Gentoo Zsh Configuration and Installation Guide]
+* [http://grml.org/zsh/zsh-lovers.html Zsh Lovers]
+* [http://grml.org/zsh/ GRML Zsh Configuration]
 * [https://github.com/robbyrussell/oh-my-zsh/wiki oh-my-zsh]
-* [https://github.com/sorin-ionescu/prezto Sorin Ionescu maintained oh-my-zsh fork now called prezto - The configuration framework for {{c|zsh}}]
-* [https://wiki.archlinux.org/index.php/Zsh ArchWiki {{c|zsh}} page] 
+* [https://wiki.archlinux.org/index.php/Zsh ArchWiki Zsh page] 
 
+[[Category:Core system]]
 [[Category:Shell]]
