Created page with "Asus X71SL is a laptop manufactured by Asus. Product page: http://www.asus.com/Notebooks/Multimedia_Entertainment/X71SL/  This article describes the hardware on the M50V and the ..."

--- a/ASUS_X71SL.mw
+++ b/ASUS_X71SL.mw
@@ -1,10 +1,10 @@
 Asus X71SL is a laptop manufactured by Asus.
-
 Product page: http://www.asus.com/Notebooks/Multimedia_Entertainment/X71SL/
 
 This article describes the hardware on the M50V and the drivers required to use it.
 
-== Hardware ==
+==Hardware==
+
 {| class="wikitable" style="text-align:center; width:80%;"
 |+ Hardware Summary and Support Status
 |-
@@ -95,8 +95,8 @@ This article describes the hardware on the M50V and the drivers required to use 
 ! scope="row" | Sound
 |HD Audio
 |SiS, Azalia
-|Full
-|snd_hda_intel (realtek codec)
+|Full?
+|snd_?
 |-
 ! scope="row" | Peripheral
 |USB 1.1
@@ -146,28 +146,3 @@ This article describes the hardware on the M50V and the drivers required to use 
 |?
 |asus_laptop
 |}
-
-== General Configuration ==
-Wired network doesn't work perfectly by default. MTU need to be set to 1492 instead of the default 1500 to work. I don't know why. This problem happens with systemresc cd, Ubuntu and every Linux distribution I tried.
-
-{{FileBox|filename=/etc/conf.d/net|title=Wired Network|1=
-mtu_eth0="1492"
-}}
-You have to create the {{Path|/etc/init.d/net.eth0}} symlink to {{Path|/etc/init.d/net.lo}} and start it at boot by:
-{{RootCmd|rc-update add net.eth0 default}}
-
-You don't really need to add it to the default boot level, because net.eth0 is started by hotplug by default. But I noticed that if I use dracut to boot the system, the ip is fine, but the settings in {{Path|/etc/conf.d/net}} are ignored!
-
-=== Sound ===
-The audio hardware is supported by the Intel HD Audio drivers:
-{{KernelBox|title=Audio Support|1=
-Device Drivers  --->
-    <*> Sound card support  --->
-        <*> Advanced Linux Sound Architecture  --->
-            [*] PCI sound devices  --->
-                <*> Intel HD Audio  --->
-                    [*]   Build Realtek HD-audio codec support
-                        [ ]     Build static quirks for Realtek codecs
-}}
-
-[[Category:Laptops]]
