--- a/Comparison_of_init_systems.mw
+++ b/Comparison_of_init_systems.mw
@@ -1,84 +1,10 @@
-__NOTOC__
-
-This article [[Article description::compares and contrasts [[init system]]s.]] While most of the init systems compared below are available for Gentoo, some (like launchd and SMF) are not.
-
-== Available software ==
-
-{| class="table table-striped table-condensed" style="text-align: center"
-|-
-! style="text-align:center;" scope="row" colspan="1" | Feature
-! style="text-align:center;" scope="row" colspan="10" | Init system
-|- 
+{| class="wikitable"
 !
-! [[sysvinit]]
-! [[OpenRC]]
+!sysvinit
+!OpenRC
 <!-- note: please keep sysvinit-based inits next to it -->
-! upstart
-! [[systemd]]
-! SMF
-! launchd
-! Epoch
-! finit
-! [[runit]]
-! BSD rc.d
+!upstart
+!systemd
+!SMF
 |-
-| Supported in Gentoo || partially (used by OpenRC) || {{Yes|Yes (default init)}} || {{No}} || {{Yes}} || {{No}} || {{No}} || {{Yes}} || {{No}} || {{Yes}} || {{No}}
-|-
-| Package / Bug# || {{Package|sys-apps/sysvinit}} || {{Package|sys-apps/openrc}} || {{Bug|498376}}<br/> [https://github.com/shiznix/unity-gentoo/tree/master/sys-apps/upstart sys-apps/upstart] in unity-gentoo overlay.  || {{Package|sys-apps/systemd}} || - || - || {{Package|sys-apps/epoch}} || - || {{Package|sys-process/runit}} || -
-|-
-| Supported platforms || Linux / BSD || Linux + BSD || Linux || Linux || Solaris || MacOSX || Linux || Linux || Linux / BSD / MacOSX || BSD
-|-
-| Main coding language || C || POSIX shell (+ C) || C || C || C || C || C || C || C || POSIX shell (+ C)
-|-
-| Main dependencies || - || init (sysv or BSD) || [[D-Bus]] || [[D-Bus]] || init(sysv?) || - || libc, /bin/sh || ? || - || rcorder
-|-
-| Init script/service format || single config file || shell scripts || config files + shell fragments || config files (ini) || XML (+ shell scripts) || plist || multiple or single .conf || multiple or single .conf || shell scripts || shell scripts
-|-
-| Per-service configuration || {{No}} || {{Yes|Yes (conf.d)}} || {{Yes|With in-job mechanisms (normal exit, respawn)}}|| {{Yes}} || {{Yes|Yes (service instances)}} || ? || {{Yes}} (v1.1+) || ? || {{No}} || {{No}}
-|-
-| Running as a daemon || {{Yes|Yes (PID 1)}} || {{Yes|Yes (PID 1)}}  || {{Yes|Yes (PID 1)}} || {{Yes|Yes (PID 1)}} || {{Yes|Yes (invoked)}} || {{Yes|Yes (PID 1)}} || {{Yes|Yes (PID 1)}} || {{Yes|Yes (PID 1)}} || {{Yes|Yes (PID 1)}} || {{Yes|Yes (PID 1)}}
-|-
-| Cross-service dependencies/events || {{No}} || {{Yes}} || {{Yes}} || {{Yes}} || {{Yes}} || {{No}} || {{Yes|Yes (basic support, v1.3+)}} || ? || {{Yes}} || {{Yes}}
-|-
-| Parallel service startup || {{Yes}} || {{Yes|Yes (optional)}} || {{Yes}} || {{Yes}} || {{Yes}} || {{Yes}} || {{No}} || {{Yes}} || {{Yes}} || {{Yes}}
-|-
-| Keeping daemons alive || {{Yes}} || {{Yes|Yes (optional v0.21+ via supervise-daemon)}} || {{Yes}} || {{Yes}} || {{Yes}} || {{Yes}} || {{Yes}} || {{Yes}} || {{Yes}} || {{Yes}}
-|-
-| Preferred service file supplier || n/a || Gentoo || Ubuntu || upstream || Solaris || MacOSX || n/a || n/a || Void Linux || NetBSD, FreeBSD, OpenBSD
-|-
-| License ||GPL v2+||2-cl. BSD||GPL v2||LGPL v2.1+||?||Apache License 2.0|| Unlicense || MIT || BSD || BSD
 |}
-
-== Supported services (in Gentoo) ==
-
-{| class="table table-condensed table-striped"
-! Feature
-! [[OpenRC]]
-! [[systemd]]
-|-
-| Filesystem mounting || One script per group (root, local, network, swap...). || Two units per mountpoint (fsck + mount), runtime-generated with dependencies.
-|-
-| getty (terminal prompts) || Started through {{Path|/etc/inittab}} or via agetty script || One unit per console, instantiated from template on-demand.
-|-
-| Networking setup || Several options<ref>[http://sources.gentoo.org/cgi-bin/viewvc.cgi/gentoo-x86/sys-apps/openrc/openrc-0.12.4.ebuild openrc-0.12.4.ebuild]</ref> like dhcpcd<ref>[[Network_management_using_DHCPCD]]</ref><ref>[http://roy.marples.name/projects/dhcpcd/ dhcpcd homepage]</ref>, netifrc<ref>{{Package|net-misc/netifrc}}</ref>, iwd <ref>[[iwd]]</ref>, or NetworkManager.<ref>[[NetworkManager]]</ref><ref>[http://projects.gnome.org/NetworkManager/ GNOME NetworkManager]</ref> || External ([[NetworkManager]], networkd, DHCP daemons).
-|-
-| X11 Display Manager setup || Single service for all (required to auto-restart). || Separate DM units.
-|}
-
-== See also ==
-
-* {{See also|Runit}}
-* {{See also|S6 and s6-rc-based init system}} 
-* {{See also|Nosh}}
-* {{See also|OpenRC}} (see the [[OpenRC##openrc-init|init section]]).
-
-== External resources ==
-
-* [https://forums.gentoo.org/viewtopic-t-994548.html s6 - Forum thread]
-* [http://forums.gentoo.org/viewtopic.php?p=7663768 Forum thread]
-* [https://github.com/OpenRC/openrc/commit/13ca79856e5836117e469c3edbcfd4bf47b6bab0 openrc-init]
-
-== References ==
-
-{{reflist}}
-[[Category:Init systems]] [[Category:Meta]]
