--- a/Ntp.mw
+++ b/Ntp.mw
@@ -1,158 +1,73 @@
-{{Lowercase title}}
-{{InfoBox stack
-|{{InfoBox homepage|http://ntp.org/|header=true}}
-}}
-
-{{package|net-misc/ntp}} [[Article description::is an implementation of the [[Network Time Protocol]].]]
+Network Time Protocol ([http://en.wikipedia.org/wiki/Network_Time_Protocol NTP]) is used to synchronize the local time with other devices over the network, this usually happens in a client-server model.
 
 == Installation ==
-
-=== USE flags ===
-
-{{USEflag|package=net-misc/ntp}}
-
-=== Emerge ===
-
-Install the suite of NTP programs:
-
+You can install {{Package|net-misc/ntp}} with the following command:
 {{Emerge|net-misc/ntp}}
 
-Alternatively [[OpenNTPD]] can be used instead of {{Package|net-misc/ntp}}.
-
-== Configuration ==
-
-=== Ntp-Client ===
-
-To adjust {{c|ntp-client}}'s command and upstream servers, edit the {{Path|ntp-client}} configuration file. The default configuration is populated with:
-
-{{FileBox|filename=/etc/conf.d/ntp-client|lang=bash|1=
-NTPCLIENT_CMD="ntpdate"
-NTPCLIENT_OPTS="-s -b -u \
-	0.gentoo.pool.ntp.org 1.gentoo.pool.ntp.org \
-	2.gentoo.pool.ntp.org 3.gentoo.pool.ntp.org"
+=== USE Flags ===
+{{USEflag
+|package=net-misc/ntp
+|caps
+|debug
+|ipv6
+|openntpd
+|parse-clocks
+|samba
+|selinux
+|snmp
+|ssl
+|vum-syntax
+|zeroconf
 }}
 
-=== Server ===
-
-In {{Path|/etc/ntp.conf}} the servers that will be used to synchronize the local time for {{c|ntpd}} can be specified. The default configuration is populated with:
-
-{{FileBox|filename=/etc/ntp.conf|1=
+=== Configuration Files ===
+The only configuration file is ''/etc/ntp.conf'' which is well explained with comments. Here are some of the more important festures.
+==== server ====
+Here you can specify with which servers you want to synchronize your local time with.
+{{File|/etc/ntp.conf||<pre>
 server 0.gentoo.pool.ntp.org
 server 1.gentoo.pool.ntp.org
 server 2.gentoo.pool.ntp.org
-server 3.gentoo.pool.ntp.org
-}}
-
-{{Note|Time zones and location of the server do not matter for NTP; it synchronizes via [[Wikipedia:Coordinated Universal Time|UTC]].}}
-
-By default the Gentoo servers are listed and enabled. A list of available servers can be found on [http://www.pool.ntp.org/en/#top ntp.org]. A home or company server here can be used, if {{c|ntpd}} is running and the machine is allowed access.
-
-On systems where a network connection is not always available at boot (laptops, etc.), it might help to add the following lines to server configuration:
-
-{{FileBox|filename=/etc/ntp.conf|1=
-server 127.127.1.0
-fudge  127.127.1.0 stratum 10
-}}
-
-This sets localhost as a server with low priority, so that the daemon starts properly even without a network connection and switches to using network servers when a connection is established.
-
-=== Permissions ===
-
-Permission are used to control who is allowed to synchronize or change permissions.
-
-Access to NTP service allowed only from localhost. <code>noquery</code> can be added to help prevent the server from being abused to conduct DDOS attacks:
-
-{{FileBox|filename=/etc/ntp.conf|1=
+server 3.gentoo.pool.ntp.org</pre>}}
+{{Note|timezones and location of the server do not matter, it synchronizes the [http://en.wikipedia.org/wiki/Coordinated_Universal_Time UTC] time}}
+Per default the gentoo servers are listed and enabled. A list of available servers can be found here:[http://www.pool.ntp.org/en/#top ntp.org] You could also define your home or company server, to synchronize time between your machines.
+==== Permissions ====
+To control who is allowed to synchronize with this machine and change the configuration, you can change these options.
+{{Warning|Running ntpd without any options, allows any other computer on the network/internet access to the server.}}
+* allow localhost synchronization with this machine and change its configuration.
+{{File|/etc/ntp.conf||<pre>
 # To deny other machines from changing the
 # configuration but allow localhost:
-restrict default nomodify nopeer noquery
+restrict default nomodify nopeer
 restrict 127.0.0.1
-}}
-
-Access to NTP service allowed only from the 192.168.0.0/24 network:
-
-{{FileBox|filename=/etc/ntp.conf|1=
-# To allow machines within the local network to synchronize
-# their clocks with this server, but ensure they are
+</pre>}}
+* allow time synchronization with this machine on the local network 192.168.0.0
+{{File|/etc/ntp.conf||<pre>
+# To allow machines within your network to synchronize
+# their clocks with your server, but ensure they are
 # not allowed to configure the server or used as peers
 # to synchronize against, uncomment this line.
 #
 restrict 192.168.0.0 mask 255.255.255.0 nomodify nopeer notrap
-}}
-
-Denying access to NTP's monlist functionality, used for querying traffic stats but also exploited in a denial-of-service attack.
-
-{{FileBox|filename=/etc/ntp.conf|1=
-disable monitor
-}}
+</pre>}}
 
 == Usage ==
-
-Basic tools and common usage.
-
-=== Client ===
-
-==== ntp-client ====
-
-To start the ntp-client:
-
-{{RootCmd|rc-service ntp-client start}}
-
-To view the status of the client:
-
-{{RootCmd|rc-service ntp-client status}}
-
-To have the client start at boot:
-
-{{RootCmd|rc-update add ntp-client default}}
-
-==== ntpdate ====
-
-This used to be the client, but its functionality is now moved into {{c|ntpd}} and {{c|ntp-client}} itself. It is purely to set the local time when started and then exits (not a service):
-
+Basic tools and common usage
+=== Service ===
+Add ntpd to the default runlevel to have the time synchronized automatically
+{{RootCmd|rc-update add ntpd default
+|/etc/init.d/ntp-client start}}
+=== ntpd ===
+If ntpd is run as a service, the time will automatically synchronize as long as the difference between the local time and the time on the server is less than 1000s (~17min). So it is pretty common to adjust the time initially to whatever the server time is as a trusted source:
+{{RootCmd|ntpd -g -c /etc/ntp.conf}}
+=== ntpdate ===
+This used to be the client, which functionality is now moved into ntpd itself. It is purely to set the local time when started and then exits (not a service):
 {{RootCmd|ntpdate pool.ntp.org}}
 
-=== Server ===
+== Links ==
+* [http://www.pool.ntp.org/ ntp.org]
+* [http://www.gentoo.org/doc/en/home-router-howto.xml#doc_chap6 Home Router Guide]
+* [http://en.gentoo-wiki.com/wiki/NTP en.gentoo-wiki.com]
 
-The server is both a client, and server. If the setup can not access net early in init, use server only instead.
-
-==== ntpd service ====
-
-If {{c|ntpd}} is run as a service, the time will automatically synchronize as long as the difference between the local time and the time on the server is less than 1000s (~17 mins). So it is pretty common to adjust the time initially to whatever the server time is as a trusted source:
-
-{{RootCmd|ntpd -g -c /etc/ntp.conf}}
-
-{{Note|If {{c|ntpd}} is already running, it will not start a second time.}}
-
-Add ntpd to the default runlevel to have the time synchronized automatically. There is no need to run a ''client'' when the service is running. In this case verify that {{c|ntp-client}} or {{c|ntpdate}} are not in any runlevels.
-
-{{RootCmd|rc-update}}
-
-When it is confirmed the configuration is clear from {{c|ntp-client}} or {{c|ntpdate}}, add the {{c|ntpd}} service:
-
-{{RootCmd
-|rc-service ntpd start
-|rc-update add ntpd default}}
-
-To monitor status of the server:
-
-{{RootCmd|rc-service ntpd status}}
-
-== See also ==
-
-* {{See also|Chrony}}
-* {{See also|OpenNTPD}}
-* {{See also|Network Time Protocol}}
-* {{See also|System time}}
-* {{See also|Home router}}
-
-== External resources ==
-
-* http://www.ntp.org/
-* https://wiki.archlinux.org/index.php/Network_Time_Protocol_daemon
-* https://wiki.archlinux.org/index.php/systemd-timesyncd
-* https://blog.hboeck.de/archives/863-Dont-update-NTP-stop-using-it.html
-* http://phk.freebsd.dk/time/20140926.html
-
-[[Category:Daemons]]
+[[Category:Software]]
 [[Category:Server]]
