Created page with "MySQL is a popular, free software relational database management system. It is often used in conjunction with web applications (such as many PHP sites) but has gained many more e..."

--- a/MySQL.mw
+++ b/MySQL.mw
@@ -1,116 +1,45 @@
-<languages />
-<translate>
+MySQL is a popular, free software relational database management system. It is often used in conjunction with web applications (such as many PHP sites) but has gained many more enterprise-level features since its start in 1994.
 
-<!--T:1-->
-{{InfoBox stack
-|{{InfoBox homepage|https://www.mysql.com/|header="true"}}
-|{{InfoBox odoc|https://dev.mysql.com/doc/}}
-|{{InfoBox wikipedia}}
-|{{InfoBox package|dev-db/mysql}}
-|{{InfoBox github|mysql/mysql-server}}
-|{{InfoBox ohloh}}
-}}
+== Installing MySQL ==
 
-<!--T:2-->
-'''MySQL''' is [[Article description::a popular, free software relational database management system.]] It is often used in conjunction with web applications (such as many [[PHP]] sites), but has gained many more enterprise-level features since its start in 1994.
+Like any other software, the installation of MySQL in Gentoo is pretty straight-forward:
 
-An alternative fork and drop-in replacement is [[MariaDB]].
-
-== Installation == <!--T:3-->
-
-=== USE flags === <!--T:33-->
-
-<!--T:4-->
-Before installing {{Package|dev-db/mysql}}, carefully consider the USE flags that influence the package deployment and features. The following table gives an overview of the package' supported USE flags:
-
-<!--T:5-->
-{{USEflag|package=dev-db/mysql}}
-
-=== Emerge === <!--T:34-->
-
-<!--T:6-->
-Once the proper USE flags have been set, install MySQL:
-
-<!--T:7-->
 {{Emerge|dev-db/mysql}}
 
-== Configuration == <!--T:12-->
+To have the database(s) started automatically at boot, add it to the default runlevel:
 
-=== Service === <!--T:35-->
-
-==== OpenRC ==== <!--T:36-->
-
-<!--T:8-->
-To have the database(s) started automatically at boot, add the mysql init script to the default runlevel:
-
-<!--T:9-->
 {{RootCmd|rc-update add mysql default}}
 
-<!--T:10-->
-After configuring the database, which is mentioned later in this document, start the mysql service:
+When the database is configured, you can start the service:
 
-<!--T:11-->
 {{RootCmd|rc-service mysql start}}
 
-=== Preliminary configuration === <!--T:13-->
+== Configuring MySQL ==
 
-<!--T:14-->
-The {{Package|dev-db/mysql}} package handles the preliminary setup of MySQL through the <code>--config</code> option:
+=== Preliminary configuration ===
 
-<!--T:15-->
-{{Emerge|dev-db/mysql|params=--config}}
+The MySQL package maintainers (in Gentoo) will help you set up MySQL through the configuration option in the ebuild.
 
-<!--T:16-->
-This will create a database, set proper permissions on it and assist in creating a good {{c|root}} password (this is for the MySQL {{c|root}} account, which is not related to the Linux {{c|root}} account).
+{{RootCmd|emerge --config dev-db/mysql}}
 
-<!--T:17-->
-To purge anonymous users and test databases from the installation, run {{c|mysql_secure_installation}} after the preliminary setup:
+The configuration will create a database, set proper permissions on it and assist you in creating a good root password (this is for the MySQL root account, which is not related to the Linux root account).
 
-<!--T:18-->
-{{RootCmd|mysql_secure_installation}}
+=== In-database configuration ===
 
-=== In-database configuration === <!--T:19-->
+When the database is up and running, you can connect to it using the '''mysql''' client application.
 
-<!--T:20-->
-When the database is up and running, connect to it using the {{c|mysql}} client application.
-
-<!--T:21-->
 {{Cmd|mysql -u root -p -h localhost|output=<pre>
 Enter root password: 
 Welcome to the MySQL monitor. Commands end with ; or \g.
 Your MySQL connection id is 1 to server version: 5.5.1
-  
+
 Type 'help;' or '\h' for help. Type '\c' to clear the buffer.
-  
+
 mysql></pre>}}
 
-<!--T:22-->
-From this point, a session to the MySQL instance is open, allowing for queries and administrative commands to be serviced.
+Once connected, you can launch queries as well as administrative commands.
 
-=== Erasing command history === <!--T:27-->
+== Resources ==
 
-<!--T:28-->
-By default MySQL logs every action, including leaving plain text passwords in its history file.
-
-<!--T:29-->
-To remove the history file:
-
-<!--T:30-->
-{{RootCmd|rm /root/.mysql_history}}
-
-<!--T:31-->
-Alternatively you can permanently disable history logging with the following:
-
-<!--T:32-->
-{{RootCmd|ln -sf /dev/null /root/.mysql_history}}
-
-== See also == <!--T:23-->
-
-<!--T:24-->
-* {{See also|MySQL/Startup_Guide}}
-* [[MySQL/Migrate to 5.0|MySQL Migration to version 5.0]]
-* {{See also|PostgreSQL}}
-
-</translate>
-
-[[Category:Server]] [[Category:Database]]
+More information about MySQL and using MySQL can be found on
+* [https://dev.mysql.com/doc/ Official MySQL Community Edition documentation]
