Created page with " == Interoperable data formats ==  === Chosing the file type wisely ===  === Converting files ===  === Using legacy formats ===  == Drag and drop ==  === The underlying widgets =..."

--- a/Complete_Handbook%2FSoftware_collaboration.mw
+++ b/Complete_Handbook%2FSoftware_collaboration.mw
@@ -1,4 +1,3 @@
-{{Stub}}
 
 == Interoperable data formats ==
 
@@ -12,9 +11,9 @@
 
 === The underlying widgets ===
 
-=== Qt ===
+=== Trolltech Qt ===
 
-=== GTK+ ===
+=== GNOME GTK ===
 
 == Team collaboration ==
 
@@ -29,5 +28,3 @@
 === Theory ===
 
 === DBus ===
-
-[[Category:Complete Handbook]]
